--- a/SCSS/_home.scss
+++ b/SCSS/_home.scss
@@ -38,3 +38,9 @@
         justify-content: center;
     }            
 }
+
+@media(max-width: 376px){
+    .social {
+        margin-bottom: 36px;
+    }      
+}
